--- a/QML_Screening.ipynb
+++ b/QML_Screening.ipynb
@@ -189,7 +189,11 @@
     "\n",
     "A CNOT gate is then implemented from qubit 0 to qubit 1 to try and eliminate unwanted states, to only allow the combined states |00> and |11> with an equal probability. \n",
     "\n",
-    "<center>($cos\\frac{\\theta}{2}$|0> + $sin\\frac{\\theta}{2}$|1>)|0> $\\xrightarrow{CX}$ $cos\\frac{\\theta}{2}$|00> + $sin\\frac{\\theta}{2}$|11></center>\n",
+    "$$\n",
+    "\\begin{aligned}\n",
+    "(cos\\frac{\\theta}{2}|0> + sin\\frac{\\theta}{2}|1>)|0> \\xrightarrow{CX} cos\\frac{\\theta}{2}|00> + sin\\frac{\\theta}{2}|11>\n",
+    "\\end(aligned)\n",
+    "%\n",
     "\n",
     "The CNOT gate will reverse the state of the second qubit only when the first qubit state is |1>. In this case, CX when applied on ($cos\\frac{\\theta}{2}$|0>)|0> will return $cos\\frac{\\theta}{2}$|00> and CX when applied to ($sin\\frac{\\theta}{2}$|1>)|0> will return  $sin\\frac{\\theta}{2}$|11> as the state of the first qubit is |1>, hence the state of the second qubit, that is |0> gets reversed to |1>\n",
     "\n",
