Cost function description

--- a/QML_Screening.ipynb
+++ b/QML_Screening.ipynb
@@ -189,7 +189,7 @@
     "\n",
     "A CNOT gate is then implemented from qubit 0 to qubit 1 to try and eliminate unwanted states, to only allow the combined states $\\lvert00\\rangle$ and $\\lvert11\\rangle$ with an equal probability. \n",
     "\n",
-    "<center>($cos\\frac{\\theta}{2}\\lvert0\\rangle$ + $sin\\frac{\\theta}{2}\\lvert1\\rangle)\\lvert0\\rangle$ $\\xrightarrow{CX}$ $cos\\frac{\\theta}{2}\\lvert00\\rangle$ + $sin\\frac{\\theta}{2}\\lvert11\\rangle$</center>\n",
+    "$$cos\\frac{\\theta}{2}\\lvert0\\rangle + sin\\frac{\\theta}{2}\\lvert1\\rangle)\\lvert0\\rangle \\xrightarrow{CX} cos\\frac{\\theta}{2}\\lvert00\\rangle + sin\\frac{\\theta}{2}\\lvert11\\rangle$$\n",
     "\n",
     "The CNOT gate will reverse the state of the second qubit only when the first qubit state is $|1>$. In this case, CX when applied on $(cos\\frac{\\theta}{2}\\lvert0\\rangle)\\lvert0\\rangle$ will return $cos\\frac{\\theta}{2}\\lvert00\\rangle$ and CX when applied to $(sin\\frac{\\theta}{2}\\lvert1\\rangle)\\lvert0\\rangle$ will return  $sin\\frac{\\theta}{2}\\lvert11\\rangle$ as the state of the first qubit is $\\lvert1\\rangle$, hence the state of the second qubit, that is $\\lvert0\\rangle$ gets reversed to $\\lvert1\\rangle$\n",
     "\n",
@@ -228,7 +228,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<center>$cos\\frac{\\theta}{2}\\lvert00\\rangle$ + $sin\\frac{\\theta}{2}\\lvert11\\rangle$ $\\xrightarrow{RX(\\pi)}$ $cos\\frac{\\theta}{2}\\lvert01\\rangle$ + $sin\\frac{\\theta}{2}\\lvert10\\rangle$</center> \n",
+    "$$cos\\frac{\\theta}{2}\\lvert00\\rangle + sin\\frac{\\theta}{2}\\lvert11\\rangle \\xrightarrow{RX(\\pi)} cos\\frac{\\theta}{2}\\lvert01\\rangle + sin\\frac{\\theta}{2}\\lvert10\\rangle\n",
+    "$$\n",
     "\n",
     "Thus, it can be observed that the states $\\lvert01\\rangle$ and $\\lvert10\\rangle$ can be returned with an equal probability.\n",
     "\n",
