--- a/QML_Screening.ipynb
+++ b/QML_Screening.ipynb
@@ -274,7 +274,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Then the Hermitian Matrix (conjugate transpose) generated on the density matrix $\\rho$ will be: $\\rho_{H}$ \n",
+    "Then the Hermitian Matrix (conjugate transpose) generated on the density matrix $\\rho$ will be: $\\tau=\\rho_{H}$ \n",
     "\n",
     "$$\n",
     "\\tau= \\rho^{H}\n",
